# foxWatch

./: .gitignore  CMakeLists.txt  LICENSE
include/app/cli/: cli.hpp
include/app/engine/: foxwatch.hpp
src/: CMakeLists.txt
src/app/: main.cpp
src/app/cli/: cli.cpp
src/app/engine/: foxwatch.cpp
